--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
 
+
+@mixin mobile{
+    @media screen and (max-width: 550px) {
+        @content;
+    }
+}
+
+@mixin table{
+    @media screen and (max-width: 800px) {
+        @content;
+    }
+}
+
 .formContainer {
     display: flex;
     font-family: 'Poppins', sans-serif;
@@ -12,12 +25,15 @@
     .formWrapper {
         display: flex;
         color: black;
-        width: 45vh;
+        width: 23vw;
         flex-direction: column;
         background-color: white;
         padding: 5vh;
         text-align: center;
         border-radius: 8px;
+        @include mobile{
+            width: 65vw;
+        }
 
         .logo {
             font-size: x-large;
@@ -69,7 +85,10 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                font-size: 2vh;
+                font-size: 20px;
+                @include mobile{
+                    font-size: 15px;
+                }
 
                 .GrFormUpload {
                     width: 3vh;
@@ -82,6 +101,9 @@
         p {
             font-size: 2vh;
             margin-top: 1.5vh;
+            @include mobile{
+                font-size: 1.5vh;
+            }
 
             .Link {
                 text-decoration: none;
@@ -116,10 +138,17 @@
         display: flex;
         overflow: hidden;
         box-shadow: 3px 3px 10px #5a189a;
-
+        @include mobile{
+            width: 100vw;
+            height: 100vh;
+        }
+        
         .sidebar {
             background-color: #7b2cbf;
             flex: 1;
+            @include mobile{
+                // display: none;
+            }
 
             .allchats {
                 display: flex;
@@ -288,6 +317,10 @@
         .chat {
             flex: 2;
             background-color: #3c096c;
+            @include mobile{
+                // display: none;
+                height: 100vh;
+            }
 
             .chatInfo {
                 background-color: #7b2cbf;
@@ -298,11 +331,23 @@
                 font-family: "poppins";
                 padding: 3vh;
                 height: 3vh;
+                @include mobile{
+                    padding-left: 2vh;
+                    justify-content: flex-start;
+                    gap: 3.5vw;
+                }
+
+                img{
+                    border-radius: 100%;
+                }
 
                 .userinfo {
                     display: flex;
                     gap: 0.7vw;
                     align-items: center;
+                    @include mobile{
+                        gap: 3vw;
+                    }
 
                     img {
                         border-radius: 50%;
@@ -311,12 +356,16 @@
                     span {
                         font-size: 2.2vh;
                         font-weight: 500;
+                       
                     }
 
                     .status {
                         font-size: 1.7vh;
                         color: white;
                         font-weight: 300;
+                        @include mobile{
+                            font-size: 1.3em;
+                        }
                     }
                 }
             }
@@ -327,6 +376,10 @@
                 // height: calc(100% - 160px);
                 height: calc(60vh + 1.3vh);
                 overflow-y: auto;
+                @include mobile{
+                    height: 82vh;
+                    border-radius: 0;
+                }
 
                 .message {
                     display: flex;
@@ -383,62 +436,61 @@
             }
 
 
-}
-
-.input {
-    background-color: white;
-    padding: 2vh;
-    height: 3vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    input {
-        border: none;
-        width: 100%;
-        outline: none;
-        padding: 10px;
-        color: #2f2d52;
-        font-size: 2vh;
-
-        &::placeholder {
-            color: lightgray;
-        }
-    }
-
-    .send {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-
-        img {
-            height: 24px;
-            cursor: pointer;
-        }
-
-        button {
-            border: none;
-            padding: 10px 15px;
-            color: white;
-            font-weight: 500;
-            transition: 0.4s;
-            background-color: #8da4f1;
-            border-radius: 0.8vh;
-
-            &:hover {
-                cursor: pointer;
-                color: #8da4f1;
-                padding: 8px 14px;
+            .input {
                 background-color: white;
-                border: 2px solid #8da4f1;
-                box-shadow: 1px 1px 12px #8da4f1;
+                padding: 2vh;
+                height: 3vh;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            
+                input {
+                    border: none;
+                    width: 100%;
+                    outline: none;
+                    padding: 10px;
+                    color: #2f2d52;
+                    font-size: 2vh;
+            
+                    &::placeholder {
+                        color: lightgray;
+                    }
+                }
+            
+                .send {
+                    display: flex;
+                    gap: 10px;
+                    align-items: center;
+            
+                    img {
+                        height: 24px;
+                        cursor: pointer;
+                    }
+            
+                    button {
+                        border: none;
+                        padding: 10px 15px;
+                        color: white;
+                        font-weight: 500;
+                        transition: 0.4s;
+                        background-color: #8da4f1;
+                        border-radius: 0.8vh;
+            
+                        &:hover {
+                            cursor: pointer;
+                            color: #8da4f1;
+                            padding: 8px 14px;
+                            background-color: white;
+                            border: 2px solid #8da4f1;
+                            box-shadow: 1px 1px 12px #8da4f1;
+                        }
+                    }
+                  }
+                 }
+              }
             }
         }
 
-    }
-}
-}
-}
 
 ::-webkit-scrollbar {
     width: 0.2em;
