--- a/src/App.scss
+++ b/src/App.scss
@@ -136,11 +136,11 @@
         width: 70%;
         border-radius: 1vh;
         display: flex;
-        overflow: hidden;
+        // overflow: hidden;
         box-shadow: 3px 3px 10px #5a189a;
         @include mobile{
             width: 100vw;
-            height: 100%;
+            height: 100vh;
         }
         
         .sidebar {
