--- a/src/App.scss
+++ b/src/App.scss
@@ -253,17 +253,28 @@
                     border-bottom: #240046;
                     display: flex;
                     justify-content: center;
+                    align-items: center;
+                    border-bottom: 2px solid white;
+                    margin-left: .5vw;
+                    margin-right: .5vw;
 
                     input {
                         background-color: transparent;
                         border: none;
                         outline: none;
-                        border-bottom: 2px solid;
                         padding: 10px;
                         width: 40vh;
                         margin: auto;
                         font-size: 2.2vh;
                         color: lightgray;
+                    }
+
+                    .searchicon{
+                        color: white;
+                        font-size: 2em;
+                        margin-bottom: -10px;
+                        &:hover{
+                            cursor: pointer;                        }
                     }
 
                     ::placeholder {
