--- a/src/App.scss
+++ b/src/App.scss
@@ -257,6 +257,10 @@
                     border-bottom: 2px solid white;
                     margin-left: .5vw;
                     margin-right: .5vw;
+                    @include mobile{
+                    margin-right: 3.5vw;
+                    margin-left: 3.5vw;
+                    }
 
                     input {
                         background-color: transparent;
@@ -267,6 +271,9 @@
                         margin: auto;
                         font-size: 2.2vh;
                         color: lightgray;
+                        @include mobile{
+                            width: 80vw;
+                        }
                     }
 
                     .searchicon{
@@ -274,7 +281,8 @@
                         font-size: 2em;
                         margin-bottom: -10px;
                         &:hover{
-                            cursor: pointer;                        }
+                            cursor: pointer;  
+                        }
                     }
 
                     ::placeholder {
